@@ -105,12 +105,12 @@
 	</td>
 	<td>
 		<select name="f_severity">
-			<?php print_enum_string_option_list( $s_severity_enum_string, $v_severity ) ?>
+			<?php print_enum_string_option_list( "severity", $v_severity ) ?>
 		</select>
 	</td>
 	<td>
 		<select name="f_reproducibility">
-			<?php print_enum_string_option_list( $s_reproducibility_enum_string, $v_reproducibility ) ?>
+			<?php print_enum_string_option_list( "reproducibility", $v_reproducibility ) ?>
 		</select>
 	</td>
 	<td>
@@ -150,7 +150,7 @@
 	</td>
 	<td align="left">
 		<select name="f_priority">
-			<?php print_enum_string_option_list( $s_priority_enum_string, $v_priority ) ?>
+			<?php print_enum_string_option_list( "priority", $v_priority ) ?>
 		</select>
 	</td>
 	<td class="category">
@@ -172,7 +172,7 @@
 	</td>
 	<td>
 		<select name="f_status">
-			<?php print_enum_string_option_list( $s_status_enum_string, $v_status ) ?>
+			<?php print_enum_string_option_list( "status", $v_status ) ?>
 		</select>
 	</td>
 	<td class="category">
@@ -194,7 +194,7 @@
 	</td>
 	<td>
 		<select name="f_projection">
-			<?php print_enum_string_option_list( $s_projection_enum_string, $v_projection ) ?>
+			<?php print_enum_string_option_list( "projection", $v_projection ) ?>
 		</select>
 	</td>
 	<td colspan="2">
@@ -213,7 +213,7 @@
 	</td>
 	<td>
 		<select name="f_eta">
-			<?php print_enum_string_option_list( $s_eta_enum_string, $v_eta ) ?>
+			<?php print_enum_string_option_list( "eta", $v_eta ) ?>
 		</select>
 	</td>
 	<td colspan="2">
